Fix max-width committee-info buat spacing
committee-info max-width jadi 155px biar spacingnya rata.

--- a/website_icositer/website_app/static/about/about.css
+++ b/website_icositer/website_app/static/about/about.css
@@ -295,7 +295,7 @@ p{
     flex-direction: column;
     align-items: center;
     margin-bottom: 80px;
-    max-width: 245px;
+    max-width: 155px;
     transition: all 0.3s ease;
 }
 
